fix icons are not center dueto margin too much

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,6 +103,7 @@ a.header__text:hover {
 .tutorial__item {
   display: grid;
   grid-template-columns: max-content auto;
+  column-gap: 1.5rem;
   margin-bottom: 2rem;
 }
 
@@ -112,7 +113,7 @@ a.header__text:hover {
 
 .tutorial__item-image-wrapper {
   position: relative;
-  margin-right: 2.5rem;
+  margin-left: 2.5rem;
 }
 .tutorial__item-image {
   width: 171px;
